完成的内容：尝试完成编译的基本路线 遇到的问题：在yacc文件内无法读取AST.h中的类 目的：对此次尝试进行提交，用于留存

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,12 @@ project(CP_Project)
 
 set(CMAKE_CXX_STANDARD 17)
 
+# 生成 lexer 和 parser 的代码
+message("-- Generating lexer and parser")
+execute_process(WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+                COMMAND bison -d src/frontend/parser.y -o src/frontend/parser.cpp
+                COMMAND flex -o src/frontend/lexer.cpp src/frontend/lexer.l)
+
 # 查找 LLVM 库
 find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
@@ -15,7 +21,15 @@ include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 # 添加可执行文件
-add_executable(CP_Project src/compiler.cpp)
+add_executable(
+        CP_Project
+        src/compiler.cpp
+        src/frontend/AST.h
+        src/frontend/AST.cpp
+        src/frontend/parser.hpp
+        src/frontend/parser.cpp
+        src/frontend/lexer.cpp
+)
 
 # 链接 LLVM 库
 target_link_libraries(CP_Project LLVM)
