成功实现了最小化功能，包括生成LLVM IR、生成目标代码、执行代码
目前已经实现以下语法：
1. main函数定义
2. 调用printInt函数，输出整型常量
3. 加法表达式

存在的有限性：
1. 内置类型只有int和void
2. 函数形参列表只实现了void空形参
3. 函数返回语句还没有实现
4. ...

ps：详情见grammar.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,9 @@ add_executable(
         src/frontend/parser.hpp
         src/frontend/parser.cpp
         src/frontend/lexer.cpp
-        src/frontend/codegen.h src/frontend/codegen.cpp)
+        src/frontend/codegen.h
+        src/frontend/io.cpp
+)
 
 # 链接 LLVM 库
 target_link_libraries(CP_Project LLVM)
