实现了分支语句、等于逻辑表达式
新增的语法：
1. if-else分支语句
2. 实现了“==”逻辑表达式
3. 增加了type.hpp，用于存放类型转换的功能函数，实现了转为bool类型的转换函数

存在的局限性：
1. “==”表达式只实现了整型
2. 类型转换函数只实现了整型

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(
         src/frontend/lexer.cpp
         src/frontend/codegen.h
         src/frontend/io.cpp
+        src/frontend/type.hpp
 )
 
 # 链接 LLVM 库
